--- a/portfolioA.html
+++ b/portfolioA.html
@@ -170,7 +170,7 @@
     <section id="about">
         <div class="section-content-box">
             <h2>About me</h2>
-            <img src="https://placehold.co/150x150/ADD8E6/000000?text=Your+Photo" alt="Profile photo" class="profile-photo">
+            <img src="MEITU-20250618-152920866.jpg" alt="Profile photo" class="profile-photo">
             <h1>Kanticha Yongcha</h1>
             <p>นางสาวกันติชา ย๋องชา</p>
             <p class="text-content">
