--- a/port.html
+++ b/port.html
@@ -316,7 +316,7 @@
     <section id="about">
         <div class="section-content-box">
             <h2 class="text-center">About me</h2>
-            <img src="https://placehold.co/150x150/ADD8E6/000000?text=Your+Photo" alt="Your Photo" class="profile-photo">
+            <img src="" alt="Your Photo" class="profile-photo">
             <h1 class="text-center">Kanticha Yongcha</h1>
             <p class="text-center">นางสาวกันติชา ย๋องชา</p>
             <p class="text-content">
