--- a/portfolioA.html
+++ b/portfolioA.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <a href="index-simple.html">Home</a>
+        <a href="portfolio.html">Home</a>
         <div class="nav-links">
             <a href="#about">About me</a>
             <a href="#experience-skills">Experience-skills</a>
@@ -20,7 +20,7 @@
     <section id="about">
         <div class="section-content-box">
             <h2>About me</h2>
-            <img src="https://ibb.co/rfXT9R1R" alt="Profile photo" class="profile-photo">
+            <img src="https://drive.google.com/file/d/1HsIvhOuRAIkRTdOjn7W9mOyO0IUYZhKd/view?usp=drivesdk" alt="Profile photo" class="profile-photo">
             <h1>Kanticha Yongcha</h1>
             <p>นางสาวกันติชา ย๋องชา</p>
             <p class="text-content">
