--- a/portfolioA.html
+++ b/portfolioA.html
@@ -19,7 +19,7 @@
     <section id="about">
         <div class="section-content-box">
             <h2>About me</h2>
-            <img src="https://drive.google.com/file/d/1HsIvhOuRAIkRTdOjn7W9mOyO0IUYZhKd/view?usp=drivesdk" alt="Profile photo" class="profile-photo">
+            <img src="https://i.postimg.cc/J0TQywXB/MEITU-20250618-152920866.jpg" alt="Profile photo" class="profile-photo">
             <h1>Kanticha Yongcha</h1>
             <p>นางสาวกันติชา ย๋องชา</p>
             <p class="text-content">
