--- a/portfolioA.html
+++ b/portfolioA.html
@@ -12,7 +12,7 @@
         <a href="portfolio.html">Home</a>
         <div class="nav-links">
             <a href="#about">About me</a>
-            <a href="#experience-skills">Experience-skills</a>
+            <a href="#experience">Experience</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
@@ -28,14 +28,12 @@
             </p>
         </div>
     </section>
-    <section id="experience-skills">
+    <section id="experience">
         <div class="section-content-box">
-            <h2>Experience-skills</h2>
+            <h2>Experience</h2>
             <h3>Experience</h3>
             <div class="experience-list">
                 <div class="experience-item">
-                    <h4>การเข้าร่วมการเเข่งขัน</h4>
-                    <p>ภายในปี2565-2567</p>
                     <ul>
                         <li>การเเข่งขัน INTERNATIONAL ARDUINO COMPETITION BCG INNOVATION WITH ARDUINO EXPLORE IOT KIT 
                             ณ วันที่13-16 กรกฎาคม 2566</li>
@@ -45,22 +43,6 @@
                             ครั้งที่25 (NSC2023) ระดับภูมิภาค ภาคใต้ณ วันที่ 31 มีนาคม 2566</li>
                     </ul>
                 </div>
-            </div>
-            <h3>Skills</h3>
-            <div class="skill-grid">
-                <div class="skill-category">
-                    <h4>ภาษาโปรแกรมมิ่ง</h4>
-                    <ul>
-                        <li>Python</li>
-                        <li>C,C#</li>
-                    </ul>
-                </div>
-                <div class="skill-category">
-                    <h4>เครื่องมือ</h4>
-                    <ul>
-                        <li>Git, GitHab</li>
-                        <li>Canva</li>
-                    </ul>
             </div>
         </div>
     </section>
